# HomeMind

./: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CITATION.cff  DEPLOYMENTS.md  DEVOPS.md  GRPC_TRPC.md  Makefile  RAG_SYSTEM.md  README.md  TECH_DOCS.md  TRAVIS_CI.md  buildspec.yml  openapi.yaml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  REPO_DESCRIPTION.txt  SECURITY.md  copilot_instructions.md
agentic-ai/: DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.yaml
aws/: Makefile  README.md  codepipeline.yaml  deploy.sh  docker-compose.yml
azure/: README.md  azure-pipelines.yml  deploy.sh
backend/: Dockerfile  README.md  package-lock.json  package.json  publish_backend.sh  tsconfig.json
data/: README.md
deployment-control/: README.md  package.json
docker/: README.md  agentic-ai.Dockerfile  compose.prod.yml
extension/: LICENSE  README.md  package-lock.json  package.json
frontend/: README.md  cypress.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  publish_frontend.sh  tsconfig.json
gcp/: README.md  cloudbuild.yaml  deploy.sh
gitlab/: README.md  deploy.sh
grpc/: README.md  docker-compose.yaml  package.json
hashicorp/: README.md  deploy.sh
jenkins/: README.md  workflow.Jenkinsfile
kubernetes/: README.md
mcp/: .env.example  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yaml  package.json
oracle-cloud/: README.md
shell/: README.md  deploy.sh  docker_build_backend.sh  docker_push_backend.sh  (+2 more)
(+212 files in other folders)
